--- a/EngineerNotebook.BlazorAdmin/Shared/RedirectToLogin.razor
+++ b/EngineerNotebook.BlazorAdmin/Shared/RedirectToLogin.razor
@@ -4,8 +4,10 @@
 
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo($"Identity/Account/Login?returnUrl="+
-                              $"/{Uri.EscapeDataString(Navigation.ToBaseRelativePath(Navigation.Uri))}");
+        Navigation.NavigateTo("login");
+        
+        //Navigation.NavigateTo($"Identity/Account/Login?returnUrl="+
+        //$"/{Uri.EscapeDataString(Navigation.ToBaseRelativePath(Navigation.Uri))}");
     }
 
 }
