--- a/EngineerNotebook.BlazorAdmin/Pages/Index.razor
+++ b/EngineerNotebook.BlazorAdmin/Pages/Index.razor
@@ -5,3 +5,7 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?"/>
+
+<AuthorizeView>
+    <p>This is for people that are authorized</p>
+</AuthorizeView>
