--- a/EngineerNotebook.BlazorAdmin/Pages/Wiki/Create.razor
+++ b/EngineerNotebook.BlazorAdmin/Pages/Wiki/Create.razor
@@ -45,8 +45,39 @@
                                 <div class="form-group">
                                     <label class="control-label col-md-6">Contents</label>
                                     
-                                    <!--Hookup TinyMCE Editor here !-->
-                                    
+                                    <BlazoredTextEditor @ref="ContentEditor">
+                                        <ToolbarContent>
+                                            <select class="ql-header">
+                                                <option selected=""></option>
+                                                <option value="1"></option>
+                                                <option value="2"></option>
+                                                <option value="3"></option>
+                                                <option value="4"></option>
+                                                <option value="5"></option>
+                                            </select>
+                                            <span class="ql-formats">
+                                                <button class="ql-bold"></button>
+                                                <button class="ql-italic"></button>
+                                                <button class="ql-underline"></button>
+                                                <button class="ql-strike"></button>
+                                            </span>
+                                            <span class="ql-formats">
+                                                <select class="ql-color"></select>
+                                                <select class="ql-background"></select>
+                                            </span>
+                                            <span class="ql-formats">
+                                                <button class="ql-list" value="ordered"></button>
+                                                <button class="ql-list" value="bullet"></button>
+                                            </span>
+                                            <span class="ql-formats">
+                                                <button class="ql-link"></button>
+                                            </span>
+                                        </ToolbarContent>
+                                        <EditorContent>
+                                            @(new MarkupString(_item.Contents))
+                                        </EditorContent>
+                                    </BlazoredTextEditor>
+
                                     <div class="col-md-12">
                                         <ValidationMessage For="() => _item.Contents"></ValidationMessage>
                                     </div>
@@ -71,7 +102,7 @@
 }
 
 @code{
-
+    BlazoredTextEditor ContentEditor;
     [Parameter]
     public EventCallback<string> OnSaveClick { get; set; }
 
@@ -79,7 +110,7 @@
     private string _modalClass = "";
     private bool _showCreateModal = false;
     private CreateDocRequest _item = new();
-
+    
     private async Task CreateClick()
     {
         await DocService.Create(_item);
