--- a/EngineerNotebook.BlazorAdmin/_Imports.razor
+++ b/EngineerNotebook.BlazorAdmin/_Imports.razor
@@ -15,3 +15,4 @@
 @using BlazorInputFile
 @using EngineerNotebook.Shared.Models
 @using EngineerNotebook.BlazorAdmin.JavaScript
+@using Blazored.TextEditor
