--- a/EngineerNotebook.BlazorAdmin/Shared/NavMenu.razor
+++ b/EngineerNotebook.BlazorAdmin/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@inherits Helpers.BlazorComponent
 
-<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Engineers Notebook</a>
+<div class="top-row navbar navbar-dark">
+    <a class="navbar-brand text-left" href="">Engineers</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,15 +18,9 @@
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <NavLink class="nav-link" href="/wiki/create" Match="NavLinkMatch.All">
                         <span class="oi oi-person" aria-hidden="true"></span>
-                        @context.User.Identity?.Name
-                    </NavLink>
-                </li>
-                
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="logout">
-                        <span class="oi oi-person" aria-hidden="true"></span> Logout
+                        New Wiki
                     </NavLink>
                 </li>
             </Authorized>
