--- a/EngineerNotebook.BlazorAdmin/_Imports.razor
+++ b/EngineerNotebook.BlazorAdmin/_Imports.razor
@@ -16,3 +16,4 @@
 @using EngineerNotebook.Shared.Models
 @using EngineerNotebook.BlazorAdmin.JavaScript
 @using Blazored.TextEditor
+@using MudBlazor
