--- a/EngineerNotebook.BlazorAdmin/Shared/NavMenu.razor
+++ b/EngineerNotebook.BlazorAdmin/Shared/NavMenu.razor
@@ -1,41 +1,9 @@
 ﻿@inherits Helpers.BlazorComponent
 
-<div class="top-row navbar navbar-dark">
-    <a class="navbar-brand text-left" href="">Engineers</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        
-        <AuthorizeView>
-            <Authorized>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/wiki/create" Match="NavLinkMatch.All">
-                        <span class="oi oi-person" aria-hidden="true"></span>
-                        New Wiki
-                    </NavLink>
-                </li>
-            </Authorized>
-        </AuthorizeView>
-    </ul>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-
-}
+<MudNavMenu>
+    <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
+    <AuthorizeView>
+        <MudNavLink Href="/wiki/list">Wiki Docs</MudNavLink>
+        <MudNavLink Href="/wiki/create">New Doc</MudNavLink>    
+    </AuthorizeView>
+</MudNavMenu>
