--- a/EngineerNotebook.BlazorAdmin/Pages/Index.razor
+++ b/EngineerNotebook.BlazorAdmin/Pages/Index.razor
@@ -1,11 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
-
-<AuthorizeView>
-    <p>This is for people that are authorized</p>
-</AuthorizeView>
+<MudContainer>
+    <MudPaper Elevation="3" Width="100%">
+        <h1 style="text-align: center">Admin Dashboard</h1>
+    </MudPaper>
+    <div style="margin-top: 32px"/>
+    <p>Welcome to the Engineer's Notebook. A service designed for the creation and discovery of user-generated documentation.</p>
+</MudContainer>
