--- a/EngineerNotebook.BlazorAdmin/Pages/Logout.razor
+++ b/EngineerNotebook.BlazorAdmin/Pages/Logout.razor
@@ -1,14 +1,14 @@
 @page "/logout"
-@inject IJSRuntime JsRuntime
-@inject HttpClient HttpClient
+@inject IJSRuntime _jsRuntime
+@inject HttpClient _httpClient
 @inherits Helpers.BlazorComponent
 
 @code{
 
     protected override async Task OnInitializedAsync()
     {
-        await HttpClient.PostAsync("Identity/Account/Logout", null);
-        await new Route(JsRuntime).RouteOutside("/Identity/Account/Login");
+        await _httpClient.PostAsync("Identity/Account/Logout", null);
+        await new Route(_jsRuntime).RouteOutside("/Identity/Account/Login");
     }
 
 }
