--- a/EngineerNotebook.BlazorAdmin/Shared/NavMenu.razor
+++ b/EngineerNotebook.BlazorAdmin/Shared/NavMenu.razor
@@ -5,5 +5,6 @@
     <AuthorizeView>
         <MudNavLink Href="/wiki/list">Wiki Docs</MudNavLink>
         <MudNavLink Href="/wiki/create">New Doc</MudNavLink>    
+        <MudNavLink Href="/tags/list">Tags</MudNavLink>
     </AuthorizeView>
 </MudNavMenu>
