--- a/EngineerNotebook.BlazorAdmin/Shared/TagForm.razor
+++ b/EngineerNotebook.BlazorAdmin/Shared/TagForm.razor
@@ -85,7 +85,7 @@
         }
 
         _snackbar.Add("Success", Severity.Success);
-        MudDialog.Close(DialogResult.Ok(Tag));
+        MudDialog.Close(DialogResult.Ok(response));
     }
 
 }
